		- Remove class level generic TFile
		- Just return an ICollection (already in place) of type TEntity in ParseFile
			- e.g. Interface for ParseFile is simply ICollection<T> ParseFile. Not TFile (that allows ICollection to be any type via a second generic)
		- DONE
	2. ParseFile implementation is good. 
		- +1 on reading line by line via the stream. ReadLine from stream preferable over ReadAllLines, so whole file isn't in memory
	3. Cache OrderedFields either in LayoutDescriptor, or in a variable above the loop in GetModelFromLine
		- DONE
			- Thought best to cache in LayoutDescriptor, in so cached for any others calls to get ordered fields going forward. 
			- Saved as class level field. Marked this dirty in the Add method, so recalculated after field is appended
*		- LEE - should this be a public property instead of a method? 
	4. Remove tentative WithLayoutDescriptor extension method in FlatFileLayoutDescriptor. 
		- Implement type converter by convention for primitive types, then go from there w/ the api. 
			- ********* RESUME HERE ********* 
			- Implement convention based type converter for primitive types. Use built in parse or tryparse methods. 
			  Use type in existing PropertyInfo, don't make user pass in the type a second time. 
				- Remember, DateTime is NOT a primitive type :)
			- As a rule of thumb, favor CONVENTION over CONFIGURATION.

6-28-81
	- Refactored unit tests. 
	- Removed virtual method calls from constructor (ParserTestBase)
	- Shared patterns and parsing for string tests and primitive type tests

7-2-18
	- Implemented default TypeConverter for primitive types w/ reflection and built in Parse method.
	- Implemented boolean specific type converter to account for 0 and 1, and uppercase True / False strings. 
	- Implemented unit tests for boolean type converter and number of rows matching input file

7-3-18
	- Changed ParseFile to right trim string fields. This should eventually be configurable. 